Changelog
=========

1.4.dev0 (unreleased)
---------------------

- Improve server-side compilation when there references between files.
  We need to compile the resources all together because otherwise the compiler
  will fail on unknown variables references between files.
  [laulaz]

- Added Spanish translation
  [macagua]

- Added more improvements about i18n
  [macagua]

- Added Bash script for i18ndude
  [macagua]

1.3 (2014-07-02)
----------------

- Update to nodejs v0.10.29
  [seppeljordan]

- Reworked server-side compilation, should work with an registered
  LESS resource now
  [seppeljordan]


1.2 (2014-03-19)
----------------

- Update to lessjs 1.7.0
  [jaroel]


1.1 (2014-03-11)
----------------
* updated nodejs to version 0.10.26
  [seppeljordan]

* updated version of less.js to 1.6.3
  [jaroel]

1.0b2 (2012-04-14)
-------------------

* Fix pypi distribution [sneridagh]

1.0b1 (2012-04-13)
-------------------

* A portal_less inherited from CSSRegistry [sneridagh]
* Import/Export GS profile [sneridagh]
* A viewlet to include less files [sneridagh]
* Register less.js in portal_javascripts [sneridagh]
* A site wide configuration with : transform server side / client wide. [sneridagh]
* Provide documented buildout to install nodejs to compile your files server side [sneridagh]
* Make the results in cached with memoize [sneridagh]
* test with twitter's bootstrap sources [sneridagh]